--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,12 +15,12 @@
             </div>
         </div>
     </nav>
-    <h1>Register</h1>
+    <h1>Sign Up!</h1>
 
     <form action="/register" method="post">
         <input type="text" name="username" placeholder="username">
         <input type="password" name="password" placeholder="password">
-        <button>Register</button>
+        <button>Sign Up</button>
         <button><a href="/login">login</a></button>
     </form>
 </body>
