initial commit for Chatapp3

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,7 +15,7 @@
             </div>
         </div>
     </nav>
-    <h1>Sign Up!</h1>
+    <h1>register</h1>
 
     <form action="/register" method="post">
         <input type="text" name="username" placeholder="username">
