initial commit to Chatapp4

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,7 @@
 <head>
     <title>register</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
+    <link rel="manifest" href="/manifest.json" />
 </head>
 
 <body>
@@ -15,12 +15,12 @@
             </div>
         </div>
     </nav>
-    <h1>register</h1>
+    <h1>Register!</h1>
 
     <form action="/register" method="post">
         <input type="text" name="username" placeholder="username">
         <input type="password" name="password" placeholder="password">
-        <button>Sign Up</button>
+        <button>Registers</button>
         <button><a href="/login">login</a></button>
     </form>
 </body>
