--- a/views/videocall.ejs
+++ b/views/videocall.ejs
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-	<title>WebRTC Audio/Video-Chat</title>
-	<link rel="manifest" href="/manifest.json" />
-</head>
-
-<body onload="callingreceivier()">
-	<div id="app">
-		<span id="myid"> </span>
-		<video id="selfview" autoplay></video>
-		<video id="remoteview" autoplay></video>
-		<button id="endCall" style="display: block;" onclick="endCurrentCall()">
-			End Call
-		</button>
-		<div id="list">
-			<ul id="users"></ul>
+	<head>
+		<title>WebRTC Audio/Video-Chat</title>
+	</head>
+	<body>
+		<div id="app">
+			<span id="myid"> </span>
+			<video id="selfview" autoplay></video>
+			<video id="remoteview" autoplay></video>
+			<button id="endCall" style="display: none;" onclick="endCurrentCall()">
+				End Call
+			</button>
+			<div id="list">
+				<ul id="users"></ul>
+			</div>
 		</div>
-	</div>
-</body>
-
+	</body>
 </html>
-<!-- <script src="/js/app.js"></script> -->
 <script src="https://js.pusher.com/4.1/pusher.min.js"></script>
 <script>
+	var pusher = new Pusher("ebe85964f2ab0f1bcdc6", {
+		cluster: "ap2",
+		encrypted: true,
+		authEndpoint: "pusher/auth",
+	});
 	// Pusher.logToConsole = true;
-	var currentuserid = <%- JSON.stringify(currentuserid) %>;
-	var users123 = <%- JSON.stringify(user) %>;
-	var userids = <%-  JSON.stringify(userids) %>;
-	var usernames = <%- JSON.stringify(usernames) %>;
-	var receivierid = users123._id;
 	var usersOnline,
 		id,
 		users = [],
@@ -38,63 +33,51 @@
 		room,
 		caller,
 		localUserMedia;
-	var calling = false;
-
-	var pusher = new Pusher("ebe85964f2ab0f1bcdc6", {
-		cluster: "ap2",
-		encrypted: true,
-		authEndpoint: "pusher/auth",
-	});
-
-	//console.log("pusher == ",pusher);
 	const channel = pusher.subscribe("presence-videocall");
-	function getCam() {
-		//Get local audio/video feed and show it in selfview video element
-		return navigator.mediaDevices.getUserMedia({
-			video: true,
-			audio: true,
-		});
-	}
-	function callingreceivier() {
-		console.log("function is rendering!!!!!");
-		channel.bind("pusher:subscription_succeeded", (members) => {
-			//usersOnline = members.count;
-			id = channel.members.me.id;
-			users.push(receivierid);
-			//callUser(receivierid);
-			getCam()
-				.then((stream) => {
-					if (window.URL) {
-						document.getElementById("selfview").srcObject = stream;
-						// document.getElementById("selfview").src = window.URL.createObjectURL(
-						// 	stream
-						// );
-					} else {
-						document.getElementById("selfview").srcObject = stream;
-						//document.getElementById("selfview").src = stream;
-					}
-					// caller.addStream(stream);
-					// localUserMedia = stream;
-				})
-				.catch((error) => {
-					console.log("an error occured", error);
-				});
-		});
+	// channel.bind("my-event", function (data) {
+	// 	alert(JSON.stringify(data));
+	// });
 
-		channel.bind("pusher:member_added", (member) => {
-			calling = true;
-			callUser(receivierid);
-		});
-
-		channel.bind("pusher:member_removed", (member) => {
-			// for remove member from list:
-			console.log("member removed = ", member);
-			var index = users.indexOf(member.id);
-			users.splice(index, 1);
-			if (member.id == room) {
-				endCall();
+	channel.bind("pusher:subscription_succeeded", (members) => {
+		//set the member count
+		usersOnline = members.count;
+		id = channel.members.me.id;
+		document.getElementById("myid").innerHTML = " My caller id is : " + id;
+		members.each((member) => {
+			if (member.id != channel.members.me.id) {
+				users.push(member.id);
 			}
 		});
+
+		render();
+	});
+
+	channel.bind("pusher:member_added", (member) => {
+		users.push(member.id);
+		render();
+	});
+
+	channel.bind("pusher:member_removed", (member) => {
+		// for remove member from list:
+		var index = users.indexOf(member.id);
+		users.splice(index, 1);
+		if (member.id == room) {
+			endCall();
+		}
+		render();
+	});
+
+	function render() {
+		var list = "";
+		users.forEach(function (user) {
+			list +=
+				"<li>" +
+				user +
+				`<input type="button" style="float:right;"  value="Call" onclick="callUser('` +
+				user +
+				`')" id="makeCall" /></li>`;
+		});
+		document.getElementById("users").innerHTML = list;
 	}
 
 	//To iron over browser implementation anomalies like prefixes
@@ -174,7 +157,6 @@
 
 	//Create and send offer to remote peer on button click
 	function callUser(user) {
-		console.log("caller = ", user);
 		getCam()
 			.then((stream) => {
 				if (window.URL) {
@@ -186,7 +168,7 @@
 					document.getElementById("selfview").srcObject = stream;
 					//document.getElementById("selfview").src = stream;
 				}
-				//toggleEndCallButton();
+				toggleEndCallButton();
 				caller.addStream(stream);
 				localUserMedia = stream;
 				caller.createOffer().then(function (desc) {
@@ -207,42 +189,18 @@
 	function endCall() {
 		room = undefined;
 		caller.close();
-		console.log("usermedia = ", localUserMedia);
-		if (localUserMedia) {
-			for (let track of localUserMedia.getTracks()) {
-				track.stop();
-			}
+		for (let track of localUserMedia.getTracks()) {
+			track.stop();
 		}
-		// if (localUserMedia.getTracks()) {
-		// 	for (let track of localUserMedia.getTracks()) {
-		// 		track.stop();
-		// 	}
-		// }
 		prepareCaller();
-		//toggleEndCallButton();
-		// similar behavior as an HTTP redirect
-		var websiteurl1 = "nuntius.serveousercontent.com";
-		var websiteurl2 = "localhost:8000";
-		var websiteurl3 = "d4c5328d1dfb.ngrok.io";
-		var hosturl = window.location.host;
-		if (hosturl == websiteurl1) {
-			websiteurl1 = "https://nuntius.serveousercontent.com/chat/" + currentuserid + "/" + receivierid;
-			location.replace(websiteurl1);
-		}
-		if (hosturl == websiteurl2) {
-			websiteurl2 = "http://localhost:8000/chat/" + currentuserid + "/" + receivierid;
-			location.replace(websiteurl2);
-		}
-		if (hosturl == websiteurl3) {
-			websiteurl3 = "https://d4c5328d1dfb.ngrok.io/chat/" + currentuserid + "/" + receivierid;
-			location.replace(websiteurl3);
-		}
+		toggleEndCallButton();
 	}
 
 	function endCurrentCall() {
 		channel.trigger("client-endcall", {
 			room: room,
 		});
+
 		endCall();
 	}
 
@@ -253,6 +211,14 @@
 				candidate: evt.candidate,
 				room: room,
 			});
+		}
+	}
+
+	function toggleEndCallButton() {
+		if (document.getElementById("endCall").style.display == "block") {
+			document.getElementById("endCall").style.display = "none";
+		} else {
+			document.getElementById("endCall").style.display = "block";
 		}
 	}
 
@@ -276,9 +242,8 @@
 		if (msg.room == id) {
 			var sessionDesc = new RTCSessionDescription(msg.sdp);
 			caller.setRemoteDescription(sessionDesc); /* .then(() => {
-	     }); */
+      }); */
 			console.log("sdp received");
-			console.log("calling = ", calling);
 			var answer = confirm(
 				"You have a call from: " + msg.from + "Would you like to answer?"
 			);
@@ -292,7 +257,7 @@
 			getCam()
 				.then((stream) => {
 					localUserMedia = stream;
-					//toggleEndCallButton();
+					toggleEndCallButton();
 					if (window.URL) {
 						document.getElementById("selfview").srcObject = stream;
 						// document.getElementById(
